# dada-poetry

./: Cargo.toml  README.md  main.py  output_randomized.md  pyproject.toml
files/: config.toml  foods copy.md  foods.md  foods_2.md  output_randomized.md
src/: main.rs
src/hyaena/: args.rs  config.rs  cook.rs  md_file.rs  mod.rs  utils.rs
